elixir/force-app/main/default/objects/Employment_Income__c/Employment_Income__c.object-meta.xml
<CustomObject>
    <label>Employment &amp; Income</label>
    <nameField>
        <label>Employment &amp; Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment &amp; Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>