elixir/force-app/main/default/objects/Employment_Income__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Commission Only</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>