elixir/force-app/main/default/objects/Employment_Income__c/fields/Car_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Allowance_Amount__c</fullName>
    <label>Car Allowance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>