elixir/force-app/main/default/objects/Employment_Income__c/fields/Commission_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Frequency__c</fullName>
    <label>Commission Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Frequency</valueSetName>
    </valueSet>
</CustomField>