elixir/force-app/main/default/objects/Employment_Income__c/fields/Employed_Self__c.field-meta.xml
<CustomField>
    <fullName>Employed_Self__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employed-Self</label>
    <type>Checkbox</type>
</CustomField>