elixir/force-app/main/default/objects/Employment_Income__c/fields/Employer_Verfied__c.field-meta.xml
<CustomField>
    <fullName>Employer_Verfied__c</fullName>
    <label>Employer Verfied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>