elixir/force-app/main/default/objects/Employment_Income__c/fields/Employment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Employment_Duration__c</fullName>
    <label>Employment Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>