elixir/force-app/main/default/objects/Employment_Income__c/fields/Goods_Services_Tax__c.field-meta.xml
<CustomField>
    <fullName>Goods_Services_Tax__c</fullName>
    <label>Goods &amp; Services Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>