elixir/force-app/main/default/objects/Employment_Income__c/fields/Government_Benefits_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Government_Benefits_Frequency__c</fullName>
    <label>Government Benefits Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Frequency</valueSetName>
    </valueSet>
</CustomField>