elixir/force-app/main/default/objects/Employment_Income__c/fields/Gross_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary_Amount__c</fullName>
    <label>Gross Salary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>