elixir/force-app/main/default/objects/Employment_Income__c/fields/On_Benefits_Student_Home_Duties_Retired__c.field-meta.xml
<CustomField>
    <fullName>On_Benefits_Student_Home_Duties_Retired__c</fullName>
    <label>On Benefits Student Home Duties Retired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Benefits</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Home Duties</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>