elixir/force-app/main/default/objects/Employment_Income__c/fields/Other_Income_Is_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Is_Taxable__c</fullName>
    <label>Other Income Is Taxable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>