elixir/force-app/main/default/objects/Employment_Income__c/fields/Private_Pension_Amount__c.field-meta.xml
<CustomField>
    <fullName>Private_Pension_Amount__c</fullName>
    <label>Private Pension Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>