elixir/force-app/main/default/objects/Employment_Income__c/fields/Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed__c</fullName>
    <label>Self Employed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>