elixir/force-app/main/default/objects/Employment_Income__c/fields/Superannuation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Frequency__c</fullName>
    <label>Superannuation Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>