elixir/force-app/main/default/objects/Employment_Income__c/fields/Workers_Compensation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Workers_Compensation_Frequency__c</fullName>
    <label>Workers Compensation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Frequency</valueSetName>
    </valueSet>
</CustomField>